# hex-core-service

./: .env.example  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.forgejo/workflows/: cff-version.yml  ci.yml  openapi-ci.yml  pages.yml  pr.yml  release-test-01-openapi.yml  release-test-02-cli.yml  release-test-03-sdk.yml  release-test-04-io-client.yml  release-test-05-publish-dry.yml  release-test-docker.yml  release.yml  sdk-sync-go.yml  sdk-sync.yml
.github/workflows/: create-release.yml
crates/api/: Cargo.toml
crates/api/src/: error.rs  main.rs  metrics.rs  openapi.json  router.rs
crates/api/src/auth/: mod.rs
crates/api/src/dto/: mod.rs
crates/api/src/handlers/: admin.rs  mod.rs  models.rs  operations.rs
crates/api/tests/: openapi_spec.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/src/domain/: auth.rs  error.rs  mod.rs  model.rs  record.rs  validation.rs
crates/core/src/ports/inbound/: enrich.rs  mod.rs  record.rs  validate.rs
crates/core/src/ports/outbound/: enricher.rs  mod.rs  record_store.rs  registry.rs  validator.rs
crates/core/src/usecases/: enrich_usecase.rs  mod.rs  record_usecase.rs  validate_usecase.rs
crates/io-http/: Cargo.toml
crates/io-http/src/: io_adapter_openapi.json  lib.rs
crates/io-http/tests/: openapi_spec.rs
crates/io-memory/: Cargo.toml
crates/io-memory/src/: lib.rs
crates/registry/: Cargo.toml
crates/registry/src/: catalog_registry.rs  index.rs  lib.rs  url_registry.rs
crates/validator-jsonschema/: Cargo.toml
crates/validator-jsonschema/src/: lib.rs
crates/validator-jsonschema/tests/: dp_record_metadata.rs
crates/validator-jsonschema/tests/fixtures/dp_record_metadata/: invalid_bad_datetime.json  invalid_bad_record_scope.json  invalid_bad_relation_type.json  invalid_extra_props_in_applied_schema.json  invalid_wrong_type_completeness.json  invalid_wrong_type_sequence_order.json  schema.json  valid_explicit_nulls.json  valid_full_material.json  valid_full_product.json  valid_minimal.json
crates/validator-owl/: Cargo.toml
crates/validator-owl/src/: lib.rs
crates/validator-owl/tests/: contract.rs
crates/validator-shacl/: Cargo.toml
crates/validator-shacl/src/: lib.rs
crates/validator-shacl/tests/: dp_record_metadata.rs
crates/validator-shacl/tests/fixtures/dp_record_metadata/: shacl.ttl
docs/: SUMMARY.md  adapter-contract.md  api-reference.md  architecture.md  authentication.md  book.toml  configuration.md  deployment.md  index.md  model-onboarding.md  runbook.md  shacl-validation.md
