[package]
name = "hex-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "hex"
path = "src/main.rs"

[dependencies]
hex-core   = { path = "../core" }
serde_json = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
