[package]
name = "hex-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for local and remote operations against the CE-RISE Hex Core Service"
readme = "../../README.md"
keywords = ["ce-rise", "hex", "cli", "validation"]
categories = ["command-line-utilities"]

[[bin]]
name = "hex"
path = "src/main.rs"

[dependencies]
anyhow     = "1"
clap       = { version = "4", features = ["derive"] }
jsonschema = { workspace = true }
reqwest    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
