[package]
name = "hex-registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hex-core      = { path = "../core" }
async-trait   = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true }
reqwest       = { workspace = true }
tracing       = { workspace = true }
time          = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
tokio    = { workspace = true }
wiremock = { workspace = true }
