[package]
name = "hex-validator-jsonschema"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hex-core             = { path = "../core" }
async-trait          = { workspace = true }
jsonschema           = { workspace = true }
serde_json           = { workspace = true }
thiserror            = { workspace = true }

[dev-dependencies]
tokio   = { workspace = true }
reqwest = { workspace = true }

[features]
integration-tests = []
