[package]
name = "hex-validator-owl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hex-core = { path = "../core" }
async-trait = { workspace = true }
serde_json  = { workspace = true }
time        = { version = "0.3", features = ["parsing"] }

[dev-dependencies]
tokio = { workspace = true }
