[package]
name = "hex-validator-shacl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hex-core = { path = "../core" }
async-trait = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
